# pmap-les_faroe-eowyen-20250124

./: README.md  config.py  copernicus_dem_faroe_download.sh  copernicus_dem_faroe_plot.py  copernicus_dem_faroe_to_pmap.py  faroe_eowyn_20250124_animate.py  faroe_eowyn_20250124_plot.py  geotiff_dem.py  pmap_build_lumi_gpu.sh  pmap_driver.sh  pmap_run_all.sh  pyproject.toml
config/: config.yaml
config/pmap_les_config/: faroe_eowyn_20250124_500000x500000_1001x1001.yml  faroe_eowyn_20250124_500000x500000_101x101.yml  faroe_eowyn_20250124_500000x500000_2501x2501.yml  faroe_eowyn_20250124_500000x500000_251x251.yml  faroe_eowyn_20250124_500000x500000_5001x5001.yml  faroe_eowyn_20250124_500000x500000_501x501.yml
input/: faroe_eowyn_20250124_500000x500000_1001x1001.yml  faroe_eowyn_20250124_500000x500000_101x101.yml  faroe_eowyn_20250124_500000x500000_2501x2501.yml  faroe_eowyn_20250124_500000x500000_251x251.yml  faroe_eowyn_20250124_500000x500000_5001x5001.yml  faroe_eowyn_20250124_500000x500000_501x501.yml
